Changes in description of buildgear.io
Buildgear.io is the tool that generated "Mini distribution"

Signed-off-by: Rabeeh Khoury <rabeeh@solid-run.com>

--- a/BuildGear.io/DESCRIPTION
+++ b/BuildGear.io/DESCRIPTION
@@ -1,1 +1,1 @@
-Build Gear is a lightweight build tool for building embedded firmware - http://buildgear.io/
+Mini distribution is based on Buildgear.io build tool - http://buildgear.io/
