--- a/Fedora-20/DESCRIPTION
+++ b/Fedora-20/DESCRIPTION
@@ -1,1 +1,1 @@
-More information on - http://github.com/jmontleon/fedora-20-cubox-i_hb
+Fedora 20 - root password 'fedora'. More information on - http://github.com/jmontleon/fedora-20-cubox-i_hb
