Enable kodi, do not advertise broken links

--- a/GeexBox/DESCRIPTION
+++ b/GeexBox/DESCRIPTION
@@ -1,1 +1,1 @@
-Snapshots of GeexBox XBMC build - http://www.solid-run.com/community/topic641.html
+Snapshots of GeexBox Mediacenter build - http://www.solid-run.com/community/topic641.html
