--- a/Volumio/DESCRIPTION
+++ b/Volumio/DESCRIPTION
@@ -1,1 +1,1 @@
-Volumio turns CuBox-i into an audiophile music playe - http://volumio.org/
+Volumio turns CuBox-i into an audiophile music player - https://volumio.org
