--- a/OpenELEC.tv.beta/DESCRIPTION
+++ b/OpenELEC.tv.beta/DESCRIPTION
@@ -1,1 +1,1 @@
-The official OpenELEC.tv 6 beta release including CuBox-i4x4 support - http://www.openelec.tv
+The official OpenELEC.tv 6.0 Beta release including CuBox-i 4x4 support - http://www.openelec.tv
