ArchLinux: update link to wiki; add username,password

--- a/ArchLinux/DESCRIPTION
+++ b/ArchLinux/DESCRIPTION
@@ -1,1 +1,1 @@
-More information on - http://www.solid-run.com/wiki/ArchLinux
+username=root, password=root - More information on http://wiki.solid-run.com/doku.php?id=products:imx6:software:os:archlinux
