Redsleev: add username and password to description

--- a/RedSleeve/DESCRIPTION
+++ b/RedSleeve/DESCRIPTION
@@ -1,1 +1,1 @@
-RedSleeve Enterprise Linux - http://www.redsleeve.org
+RedSleeve Enterprise Linux - username=root, password=password - http://www.redsleeve.org
