XBian: always fetch latest release

--- a/XBian/DESCRIPTION
+++ b/XBian/DESCRIPTION
@@ -1,1 +1,1 @@
-Debian based XBMC/Kodi distribution - http://www.xbian.org
+XBian is a small, fast and lightweight media center linux distro based on a minimal Debian - http://www.xbian.org
