Update DESCRIPTION to include login information

--- a/openSUSE-Tumbleweed/DESCRIPTION
+++ b/openSUSE-Tumbleweed/DESCRIPTION
@@ -1,1 +1,1 @@
-Rolling-release version of openSUSE, straight from the openSUSE project.
+Rolling-release version of openSUSE [user: root, password: linux]
